--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "type": "silverstripe-vendormodule",
     "keywords": ["silverstripe", "static", "html", "security", "performance", "static-publishing", "caching", "cache", "static-caching", "static-cache", "queue", "publishing"],
     "require": {
-        "silverstripe/framework": "^4.0.2",
+        "silverstripe/framework": "^4",
         "silverstripe/cms": "^4",
         "silverstripe/config": "^1",
-        "symbiote/silverstripe-queuedjobs": "^4.0.6",
-        "silverstripe/versioned": "^1.0.2"
+        "symbiote/silverstripe-queuedjobs": "^4",
+        "silverstripe/versioned": "^1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
@@ -27,11 +27,6 @@
     "include-path": [
         "includes/"
     ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "4.x-dev"
-        }
-    },
     "prefer-stable": true,
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
