set minimum stability

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,11 @@
     "include-path": [
         "includes/"
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "4.x-dev"
+        }
+    },
     "prefer-stable": true,
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
